--- a/book.toml
+++ b/book.toml
@@ -1,5 +1,5 @@
 [book]
-title = "Bend Language Guide (Unofficial)"
+title = "Bend Programming Language Guide (Unofficial)"
 authors = ["{{author}}"]
 language = "en"
 multilingual = false
