--- a/book.toml
+++ b/book.toml
@@ -12,4 +12,20 @@ create-missing = false
 edition = "2021"
 
 [output.html]
+smart-punctuation = true
+mathjax-support = true
 git-repository-url = "https://github.com/geekyayush/bend-lang"
+edit-url-template = "https://github.com/geekyayush/bend-lang/edit/main/{path}"
+
+[output.html.playground]
+editable = true
+line-numbers = true
+
+[output.html.search]
+limit-results = 20
+use-boolean-and = true
+boost-title = 2
+boost-hierarchy = 2
+boost-paragraph = 1
+expand = true
+heading-split-level = 2
