--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"lint:fix": "npm run lint -- --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Ayush Somani",
   "license": "Apache-2.0",
   "dependencies": {
 		"markdownlint-cli2": "^0.13.0",
